# oni_world_app

./: CMakeLists.txt  CMakePresets.json  README.md  README.zh-CN.md  package.json  webpack.config.ts
asset/: Asubworlds.json  CMakeLists.txt  JsonAssetsFromYaml.py  sha1.txt
asset/dlc/dlc2/worldgen/: mixing.json  mobs.json
asset/dlc/dlc3/worldgen/: mixing.json
asset/dlc/dlc4/worldgen/: borders.json  mixing.json  mobs.json
asset/dlc/expansion1/worldgen/: borders.json  mobs.json
asset/templates/: AllLiquids.json
asset/templates/bases/: forestBase.json  sandstoneBase.json
asset/templates/events/strangeasteroid/: frozen_frag_lockers_rotated.json  frozen_vacillator.json  gold_volcanoes.json  jungle_frag_lightbugs_rotated.json  jungle_frag_lockers_rotated.json  jungle_lab_poolbottom_rotated.json  marsh_frag_doorway_rotated.json  marsh_frag_table_rotated.json  marsh_vacillator.json  ocean_poi_dining_room_rotated.json  ocean_poi_ladder_tunnel_rotated.json  poi_gravitas_rotated.json
asset/templates/geysers/: big_volcano.json  chlorine_gas.json  chlorine_gas_cool.json  filthy_water.json  generic.json  hot_co2.json  hot_hydrogen.json  hot_po2.json  hot_steam.json  hot_water.json  liquid_co2.json  methane.json  molten_copper.json  molten_gold.json  molten_iron.json  oil_drip.json  salt_water.json  slimy_po2.json  slush_salt_water.json  slush_water.json  small_volcano.json  steam.json  volcanohole.json
asset/templates/poi/: poi_broken_farm.json  poi_dining_room.json  poi_dupe_sensor_puzzle.json  poi_gravitas.json  poi_ladder_tunnel.json  poi_ocean_geyser_saltwater.json  poi_oil_six_switch_door.json  poi_oil_switchdoor.json  poi_old_pool.json  poi_rust_spiral.json  poi_salt_spiral.json  poi_salt_spiral_2.json  poi_salt_spiral_3.json  poi_satellite_1_a.json  poi_satellite_1_b.json  poi_satellite_2_a.json  poi_satellite_2_b.json  poi_satellite_3_a.json
asset/templates/poi/frozen/: frag_lockers.json  frag_vendingmachine.json  heatsink_a.json  heatsink_b.json  heatsink_c.json  heatsink_d.json  lab_basement.json  lab_splitroom.json
asset/templates/poi/hotmarsh/: frag_doorway.json  frag_doorway_frozen.json  frag_table.json  geyser_methane.json  geyser_steam.json  lab_burrow.json  lab_splitroom.json
asset/templates/poi/jungle/: buttongate.json  frag_lightbugs.json  frag_lockers.json  geyser_chlorine.json  geyser_methane.json  geyser_steam.json  lab_daytimer.json  lab_poolbottom.json  lab_poolbottom_frozen.json  lab_vinetank.json  oxylite_spiral.json
asset/templates/poi/oil/: oilpockets_geyser_a.json  oilpockets_geyser_b.json  oilpockets_geyser_c.json  oilpockets_geyser_d.json  oilpockets_geyser_e.json  oilpockets_geyser_f.json  small_oilpockets_geyser_a.json  small_oilpockets_geyser_a_dry.json  small_oilpockets_geyser_b.json  small_oilpockets_geyser_b_dry.json  small_oilpockets_geyser_c.json  small_oilpockets_geyser_d.json  small_oilpockets_geyser_e.json  small_oilpockets_geyser_e_dry.json  small_oilpockets_geyser_f.json  small_oilpockets_geyser_f_dry.json  small_oilpockets_geyser_g.json  small_oilpockets_geyser_h.json
asset/worldgen/: borders.json  defaults.json  layers.json  mobs.json  rivers.json  rooms.json  temperatures.json
asset/worldgen/biomes/: Barren.json  Crystal.json  Default.json  Forest.json  Frozen.json  HotMarsh.json  Jungle.json  Magma.json  Misc.json  Ocean.json  Oil.json  Rust.json  Sedimentary.json
asset/worldgen/clusters/: Badlands.json  BigEmptyCluster.json  ForestDefault.json  ForestHot.json  ForestLush.json  KleiFest2023.json  Oasis.json  Oceania.json  SandstoneDefault.json  SandstoneFrozen.json  TinyEmptyCluster.json  TinySurface.json  Volcanic.json
asset/worldgen/features/: BleachLake.json  DefaultRoom.json  FlutBowl.json  FlutBowlBlob.json  FlutBowlTall.json  Geode.json  GeoventCave.json  HatchHabitat.json  HatchHabitatTall.json  HexapedStart.json  SprinkleOfMetal.json  SprinkleOfOxyRock.json
asset/worldgen/features/forest/: OxyfernCave.json  PhosphoriteLump.json  SmallFrozenLake.json  SmallLake.json  TallRoom.json
asset/worldgen/features/frozen/: CO2Lake.json  ColdBubble.json
asset/worldgen/features/generic/: StartLocation.json
asset/worldgen/features/hotmarsh/: BlobRoom.json  BlobSlushRoom.json  GeyserHole.json  LargeBlobRoomDry.json  TallRoom.json  TallSlushRoom.json
asset/worldgen/features/jungle/: BleachRoom.json  SandGeode.json  SmallRoom.json
asset/worldgen/features/magma/: Volcano.json
asset/worldgen/features/ocean/: BleachLump.json  CrabPool.json  DeepPool.json  SaltCave.json  TallRoom.json
asset/worldgen/features/oilpockets/: Cavity.json  CavityOilFloatersTall.json  CavityPond.json  CavityPondFrozen.json  DiamondClump.json  DiamondClumpSmall.json  (+1 more)
asset/worldgen/subworlds/: Default.json  Empty.json  Impenetrable.json
asset/worldgen/traits/: BouldersLarge.json  BouldersMedium.json  BouldersMixed.json  BouldersSmall.json  DeepOil.json  FrozenCore.json  GeoActive.json  Geodes.json  Geodormant.json  GlaciersLarge.json  IrregularOil.json  MagmaVents.json  MetalPoor.json  MetalRich.json  MisalignedStart.json  SlimeSplats.json  SubsurfaceOcean.json  Volcanoes.json
asset/worldgen/worlds/: Badlands.json  BigEmpty.json  ForestDefault.json  ForestHot.json  ForestLush.json  Helicona.json  Oasis.json  Oceania.json  SandstoneDefault.json  SandstoneFrozen.json  StrangeAsteroidKleiFest2023.json  TheRock.json  TinyEmpty.json  TinySurface.json  Volcanic.json
src/: App.cpp  App.hpp  CMakeLists.txt  JsonAssetsFromYaml.py  JsonDeserializeGen.py  TemplateSpawning.cpp  WorldGen.cpp  WorldGen.hpp  config.h.in  index.html  index.tsx  main.cpp  types.d.ts
src/Setting/: ClusterLayout.hpp  DefaultSettings.hpp  JsonDeserialize.hpp  SampleDescriber.hpp  SettingsCache.cpp  SettingsCache.hpp  SimHashes.hpp  TemplateContainer.hpp  World.hpp  WorldGenClasses.cpp  WorldGenClasses.hpp
src/Utils/: Diagram.cpp  Halfedge.hpp  InplaceVector.hpp  Log.hpp  PointGenerator.cpp  SortHelper.hpp  Vector2f.hpp  Voronoi.cpp  Voronoi.hpp
src/jsUtils/: configuration.ts  index.css  language.ts  mixings.tsx  settings.tsx  toolbar.tsx  worldcanvas.tsx
(+664 files in other folders)
